discussion/kv_engine/176152/176152_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Meter [RW]CU for DCP

When a normal user opens a DCP stream it should record
the metering data (and include the [RW]CUs used in the throttling
data for normal operations).

Note that we don't try to throttle DCP traffic so it will always
run at full speed

Change-Id: I479ac3074fd4e10b9ffe1b514e08a1cf0e8e896e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-06-16 13:38:16.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-16 13:43:39.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46870/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46870/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20349/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20349/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20002/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20002/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20996/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20996/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28385/ : ABORTED

Failure of an engine_testapp test:

<pre>
Running [74/160]: disk>RAM paged-out rm...../kv_engine/engines/ep/tests/ep_testsuite.cc:4326 Test failed: `" (Expected `5346" to be greater than or equal to `5497" - Fell below initial overhead.)
[2022-06-16T13:43:03.887Z] (147 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28385/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28385/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7910/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7910/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19216/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19216/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18147/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/connection/async_client_connection.cc:93:14: error: no member named "cout" in namespace "std" [clang-diagnostic-error]
        std::cout << "Protocol error" << std::endl;
             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18147/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/connection/async_client_connection.cc:93:14:
error: no member named "cout" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18147/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39380/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/protocol/connection/async_client_connection.cc:93:14:
error: no member named "cout" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39380/ )

CMake error: CMakeLists.txt:139 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39380/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7808/ : FAILURE

Compile error at [2022-06-16T13:39:06.922Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/protocol/connection/async_client_connection.cc:93:14:
error: no member named "cout" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7808/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17261/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
